--- a/src/index.less
+++ b/src/index.less
@@ -2,7 +2,9 @@
 @import './component/index.less';
 @import './widget/index.less';
 @import './iconfonts/style.css';
-
+.hidden {
+  display: none !important;
+}
 .@{prefix-cls} {
   --klinecharts-pro-primary-color: @c-primary;
   --klinecharts-pro-hover-background-color: @c-hover-background-light;
